snackager/k8s/staging/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: snackager
  annotations:
    controller.autoneg.dev/neg: '{"backend_services": {"80": [{"name":"snackager-staging", "max_rate_per_endpoint":50}]}}'
