snackager/k8s/staging/ingress-spec.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: snackager
spec:
  tls:
  - hosts:
    - staging.snackager.expo.io
    secretName: snackager-tls
  rules:
    - host: staging.snackager.expo.io
      http:
        paths:
        - backend:
            serviceName: snackager
            servicePort: 80
          path: /
